<resources>
    <string name="app_name">Kids GK</string>
    <string name="your_score">Your Score</string>
    <string name="tv_correct">You have answered %1$s correct question(s)</string>
    <string name="tv_out_of">Out of total %1$s questions</string>
    <string name="play_now">Play Now</string>
    <string name="welcome">Welcome</string>
    <string name="kids_gk">Kids GK</string>
    <string name="banner">banner</string>
    <string name="second_banner">second_banner</string>
    <string name="quiz">Quiz</string>
    <string name="video">Videos</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up_now">Sign Up Now</string>

    <string name="admob_app_id">ca-app-pub-4214231949040116~9163055877</string>
    <string name="banner_ad_id">ca-app-pub-4214231949040116/5335491509</string>
    <string name="native_ad_unit">ca-app-pub-4214231949040116/2738998426</string>
    <string name="interstitial_ad_id">ca-app-pub-4214231949040116/3605824479</string>
    <string name="vid_interstitial_ad_id">ca-app-pub-4214231949040116/7071050163</string>
    <string name="app_open_ad_id">ca-app-pub-4214231949040116/1246597861</string>

    <!-- Unity Keys -->
    <string name="game_id">gameId</string>
    <string name="zone_id">zoneId</string>
    <string name="gdpr_consent">gdpr.consent</string>
    <!-- Unity Credentials -->
    <string name="unity_game_id">3798533</string>
    <string name="unity_interstitial">KGInterstitial</string>
    <string name="unity_banner">KGBanner</string>
    
    <string name="adcolony_app_id">app04b6e7f570e14a4099</string>
    <string name="adcolony_interstitial">vzf2a08536b08544bf8b</string>
    <string name="adcolony_banner">vz2a6a2671708740fb88</string>

    <string name="play_again">Play Again</string>
    <string name="your_quiz_score">Your Quiz Score is :</string>
    <string name="slash">/</string>
    <string name="remark">Remark:</string>


    <string name="native_advanced_test">ca-app-pub-3940256099942544/2247696110</string>
    <string name="banner_test_ad_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="test_interstitial">ca-app-pub-3940256099942544/1033173712</string>

    <string name="api_key">AIzaSyBz3yFUUy94BuVlcBDlA6NHY5l_ekgG9is</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="verify_mobile_number">Send OTP</string>
    <string name="mobile_number">Enter Mobile No.</string>
    <string name="name">Name</string>
    <string name="login"><u>Login</u></string>

</resources>
