<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity"
    android:background="#dec4ee">


    <TextView
        android:id="@+id/tv_kids_gk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kids_gk"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginTop="24dp"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:contentDescription="@string/banner"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@id/tv_kids_gk"
        android:layout_marginTop="8dp"
        android:src="@mipmap/banner_second"
        android:scaleType="centerCrop"
        android:layout_marginBottom="8dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome"
        android:textSize="20sp"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_above="@id/tv_play_again"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/tv_play_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/play_now"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"
        app:cornerRadius="12dp"
        android:layout_centerInParent="true"
        android:padding="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"/>

    <ImageView
        android:contentDescription="@string/second_banner"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:src="@mipmap/banner"
        android:scaleType="centerCrop"/>

</RelativeLayout>